# savitsky_project_1

./: .env.example  .flake8  README.md  pyproject.toml  requirements.txt
src/: reports.py  utils.py  views.py
tests/: conftest.py  function_report.txt  test_reports.py  test_services.py  test_utils.py  test_views.py
