[tool.poetry]
name = "savitsky-project-1"
version = "0.1.0"
description = ""
authors = ["Alexandr Savitsky <savitsky.alexandr@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
pytest = "^8.3.3"
black = "^24.10.0"
mypy = "^1.13.0"
requests = "^2.32.3"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
